log
Thu 04 May 2023 12:30:48 AM UTC: 
 tests:  0|5
total_score: 0/70
d8d33d3
Thu 04 May 2023 12:32:27 AM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:62:7: error: implicit declaration of function ‘insertBack’ [-Werror=implicit-function-declaration]
   62 |       insertBack(list,new_node);
      |       ^~~~~~~~~~
sudoku.c:64:11: error: returning ‘List *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   64 |    return list;
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
828a5c6
Thu 04 May 2023 12:32:38 AM UTC: 
 sudoku.c | 19 +------------------
 1 file changed, 1 insertion(+), 18 deletions(-)
 tests:  0|5
total_score: 0/70
485cc74
Thu 04 May 2023 12:53:16 AM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  2|4
total_score: 15/70
be7578b
Thu 04 May 2023 02:05:30 AM UTC: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:73:14: error: ‘p’ undeclared (first use in this function)
   73 |         for (p = 0; p < 9; p++) {
      |              ^
sudoku.c:73:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
75d2934
Thu 04 May 2023 02:05:53 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
deb301d
Thu 04 May 2023 02:06:07 AM UTC: 
 sudoku.c | 34 ----------------------------------
 1 file changed, 34 deletions(-)
 tests:  2|4
total_score: 15/70
0136cb3
Thu 04 May 2023 02:15:58 AM UTC: 
 sudoku.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
 tests:  5|3
total_score: 35/70
72d9207
Thu 04 May 2023 02:17:42 AM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|2
total_score: 45/70
ee858d8
Thu 04 May 2023 02:22:16 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  7|1
total_score: 55/70
6bfd25b
Thu 04 May 2023 02:26:57 AM UTC: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:129:5: error: ‘stack’ undeclared (first use in this function); did you mean ‘Stack’?
  129 |     stack<Node*> S;
      |     ^~~~~
      |     Stack
sudoku.c:129:5: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:129:11: error: expected expression before ‘Node’
  129 |     stack<Node*> S;
      |           ^~~~
sudoku.c:130:5: error: ‘S’ undeclared (first use in this function)
  130 |     S.push(n);
      |     ^
sudoku.c:130:12: error: ‘n’ undeclared (first use in this function)
  130 |     S.push(n);
      |            ^
sudoku.c:138:13: error: implicit declaration of function ‘isFinalState’ [-Werror=implicit-function-declaration]
  138 |         if (isFinalState(curr)) {
      |             ^~~~~~~~~~~~
sudoku.c:142:9: error: ‘vector’ undeclared (first use in this function)
  142 |         vector<Node*> neighbors = getNeighbors(curr);
      |         ^~~~~~
sudoku.c:142:16: error: expected expression before ‘Node’
  142 |         vector<Node*> neighbors = getNeighbors(curr);
      |                ^~~~
sudoku.c:143:29: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
  143 |         for (Node* neighbor : neighbors) {
      |                             ^
sudoku.c:144:20: error: ‘neighbor’ undeclared (first use in this function)
  144 |             S.push(neighbor);
      |                    ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4f5969d
Thu 04 May 2023 02:27:01 AM UTC: 
 sudoku.c | 20 --------------------
 1 file changed, 20 deletions(-)
 tests:  7|1
total_score: 55/70
f179c40
Thu 04 May 2023 02:27:48 AM UTC: 
 sudoku.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:130:1: error: statement with no effect [-Werror=unused-value]
  130 | 2 / 2
      | ^
sudoku.c:130:6: error: expected ‘;’ before ‘Para’
  130 | 2 / 2
      |      ^
      |      ;
  131 | 
  132 | Para implementar la búsqueda en profundidad, necesitamos una función que explore el grafo a partir del nodo inicial y que vaya generando los nodos adyacentes para explorarlos en profundidad. La idea es ir explorando cada rama del grafo hasta encontrar un nodo final o hasta agotar todas las posibilidades.
      | ~~~~  
test.c: In function ‘adj_test1’:
test.c:76:17: error: ‘msg’ undeclared (first use in this function)
   76 |         sprintf(msg, "primer nodo %d %d %d... (deberia ser 5 3 1...)",aux->sudo[0][0],aux->sudo[0][1],aux->sudo[0][2]);
      |                 ^~~
test.c:76:17: note: each undeclared identifier is reported only once for each function it appears in
test.c: In function ‘test_mod_adj’:
test.c:157:17: error: ‘msg’ undeclared (first use in this function)
  157 |         sprintf(msg,"la lista deberia tener tamanno 3 pero tiene tamanno %d",get_size(adj));
      |                 ^~~
test.c: In function ‘DFS’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
875dd8b
Thu 04 May 2023 02:28:50 AM UTC: 
 sudoku.c | 48 ++++++++++++++++++++++--------------------------
 1 file changed, 22 insertions(+), 26 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:130:13: error: ‘n’ undeclared (first use in this function)
  130 |     push(S, n);
      |             ^
sudoku.c:130:13: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:132:12: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  132 |     while(!isEmpty(S)){
      |            ^~~~~~~
      |            is_empty
sudoku.c:138:13: error: implicit declaration of function ‘freeStack’; did you mean ‘createStack’? [-Werror=implicit-function-declaration]
  138 |             freeStack(S);
      |             ^~~~~~~~~
      |             createStack
sudoku.c:150:9: error: implicit declaration of function ‘freeNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
  150 |         freeNode(current);
      |         ^~~~~~~~
      |         createNode
sudoku.c:151:9: error: implicit declaration of function ‘freeList’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
  151 |         freeList(adj_nodes);
      |         ^~~~~~~~
      |         createList
cc1: all warnings being treated as errors
Compilation failed
4aee645
Thu 04 May 2023 02:30:23 AM UTC: 
 sudoku.c | 30 +++++++++++-------------------
 1 file changed, 11 insertions(+), 19 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:131:12: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  131 |     while(!isEmpty(S)){
      |            ^~~~~~~
      |            is_empty
sudoku.c:132:20: error: void value not ignored as it ought to be
  132 |         Node* node=pop(S);
      |                    ^~~
sudoku.c:135:13: error: implicit declaration of function ‘clear’; did you mean ‘clean’? [-Werror=implicit-function-declaration]
  135 |             clear(S);
      |             ^~~~~
      |             clean
sudoku.c:144:9: error: implicit declaration of function ‘clearList’; did you mean ‘createList’? [-Werror=implicit-function-declaration]
  144 |         clearList(adj);
      |         ^~~~~~~~~
      |         createList
cc1: all warnings being treated as errors
Compilation failed
be5a3a7
Thu 04 May 2023 02:30:54 AM UTC: 
 sudoku.c | 19 -------------------
 1 file changed, 19 deletions(-)
 tests:  7|1
total_score: 55/70
3dd285c
Thu 04 May 2023 11:07:42 PM UTC: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:130:19: error: ‘n’ undeclared (first use in this function)
  130 |   pushFront(stack,n);
      |                   ^
sudoku.c:130:19: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:132:10: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  132 |   while(!isEmpty(stack)){
      |          ^~~~~~~
      |          is_empty
sudoku.c:138:7: error: implicit declaration of function ‘clear’; did you mean ‘clean’? [-Werror=implicit-function-declaration]
  138 |       clear(stack);
      |       ^~~~~
      |       clean
cc1: all warnings being treated as errors
Compilation failed
0235bc9
